# datafusion-examples

./: .gitignore  .gitmodules  Cargo.toml  README.md
aws/: Cargo.toml
s3/: Cargo.toml
s3-glob/: Cargo.toml
s3-glob/src/: main.rs
s3-minio/: Cargo.toml  README.md
s3-minio/src/: main.rs
s3-sdk-credentials/: Cargo.toml
s3-sdk-credentials/src/: main.rs
s3/src/: main.rs
