[package]
name = "s3-sdk-credentials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = { version = "11.0.0" }
object_store = { version = "0.4.0", features = ["aws"]}
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }
glob = "0.3.0"
url = "2.2"
futures = "0.3"
itertools = "0.10"
aws-config = "0.48.0"
aws-types = "0.48.0"
